--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/parmeet-gba-pixel-pfp.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ter-me-nal</title>
+    <title>parmeet@portfolio:~$</title>
   </head>
   <body>
     <div id="root"></div>
