--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/parmeet-gba-pixel-pfp.jpeg" />
+    <link rel="icon" type="image/svg+xml" href="/terminal-solid-full.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>parmeet@portfolio:~$</title>
   </head>
